--- a/.github/workflows/__language-aliases.yml
+++ b/.github/workflows/__language-aliases.yml
@@ -64,6 +64,7 @@ jobs:
       with:
         languages: C#,java-kotlin,swift,typescript
         tools: ${{ steps.prepare-test.outputs.tools-url }}
+        token: ${{ secrets.CODEQL_TOKEN }}
 
     - name: Check languages
       run: |
