--- a/pr-checks/checks/cpp-deptrace-enabled-on-macos.yml
+++ b/pr-checks/checks/cpp-deptrace-enabled-on-macos.yml
@@ -13,9 +13,11 @@ steps:
     with:
       languages: cpp
       tools: ${{ steps.prepare-test.outputs.tools-url }}
+      token: ${{ secrets.CODEQL_TOKEN }}
   - uses: ./../action/autobuild
     with:
       working-directory: autobuild-dir
+      token: ${{ secrets.CODEQL_TOKEN }}
     env:
       CODEQL_EXTRACTOR_CPP_AUTOINSTALL_DEPENDENCIES: true
   - shell: bash
