--- a/pr-checks/checks/javascript-source-root.yml
+++ b/pr-checks/checks/javascript-source-root.yml
@@ -13,6 +13,7 @@ steps:
       languages: javascript
       source-root: ../new-source-root
       tools: ${{ steps.prepare-test.outputs.tools-url }}
+      token: ${{ secrets.CODEQL_TOKEN }}
   - uses: ./../action/analyze
     with:
       upload-database: false
