--- a/pr-checks/checks/swift-custom-build.yml
+++ b/pr-checks/checks/swift-custom-build.yml
@@ -10,6 +10,7 @@ steps:
     with:
       languages: swift
       tools: ${{ steps.prepare-test.outputs.tools-url }}
+      token: ${{ secrets.CODEQL_TOKEN }}
   - uses: ./../action/.github/actions/setup-swift
     with:
       codeql-path: ${{steps.init.outputs.codeql-path}}
@@ -23,6 +24,7 @@ steps:
     id: analysis
     with:
       upload-database: false
+      token: ${{ secrets.CODEQL_TOKEN }}
   - name: Check database
     shell: bash
     run: |
