--- a/.github/workflows/__analyze-ref-input.yml
+++ b/.github/workflows/__analyze-ref-input.yml
@@ -70,6 +70,7 @@ jobs:
         languages: cpp,csharp,java,javascript,python
         config-file: ${{ github.repository }}/tests/multi-language-repo/.github/codeql/custom-queries.yml@${{
           github.sha }}
+        token: ${{ secrets.CODEQL_TOKEN }}
     - name: Build code
       shell: bash
       run: ./build.sh
@@ -78,5 +79,6 @@ jobs:
         upload-database: false
         ref: refs/heads/main
         sha: 5e235361806c361d4d3f8859e3c897658025a9a2
+        token: ${{ secrets.CODEQL_TOKEN }}
     env:
       CODEQL_ACTION_TEST_MODE: true
