--- a/.github/workflows/__go-indirect-tracing-workaround-diagnostic.yml
+++ b/.github/workflows/__go-indirect-tracing-workaround-diagnostic.yml
@@ -68,6 +68,7 @@ jobs:
       with:
         languages: go
         tools: ${{ steps.prepare-test.outputs.tools-url }}
+        token: ${{ secrets.CODEQL_TOKEN }}
   # Deliberately change Go after the `init` step
     - uses: actions/setup-go@v5
       with:
@@ -79,6 +80,7 @@ jobs:
       with:
         output: ${{ runner.temp }}/results
         upload-database: false
+        token: ${{ secrets.CODEQL_TOKEN }}
     - name: Check diagnostic appears in SARIF
       uses: actions/github-script@v7
       env:
