--- a/.github/workflows/__init-with-registries.yml
+++ b/.github/workflows/__init-with-registries.yml
@@ -88,6 +88,7 @@ jobs:
           - url: "https://ghcr.io/v2/"
             packages: "*/*"
             token: "${{ secrets.GITHUB_TOKEN }}"
+        token: ${{ secrets.CODEQL_TOKEN }}
 
     - name: Verify packages installed
       shell: bash
