--- a/.github/workflows/__packaging-codescanning-config-inputs-js.yml
+++ b/.github/workflows/__packaging-codescanning-config-inputs-js.yml
@@ -82,6 +82,7 @@ jobs:
         packs: +codeql-testing/codeql-pack1@1.0.0
         languages: javascript
         tools: ${{ steps.prepare-test.outputs.tools-url }}
+        token: ${{ secrets.CODEQL_TOKEN }}
     - name: Build code
       shell: bash
       run: ./build.sh
@@ -89,6 +90,7 @@ jobs:
       with:
         output: ${{ runner.temp }}/results
         upload-database: false
+        token: ${{ secrets.CODEQL_TOKEN }}
 
     - name: Check results
       uses: ./../action/.github/actions/check-sarif
