--- a/.github/workflows/__packaging-inputs-js.yml
+++ b/.github/workflows/__packaging-inputs-js.yml
@@ -88,6 +88,7 @@ jobs:
     - uses: ./../action/analyze
       with:
         output: ${{ runner.temp }}/results
+        token: ${{ secrets.CODEQL_TOKEN }}
 
     - name: Check results
       uses: ./../action/.github/actions/check-sarif
