--- a/.github/workflows/__remote-config.yml
+++ b/.github/workflows/__remote-config.yml
@@ -106,9 +106,12 @@ jobs:
         languages: cpp,csharp,java,javascript,python
         config-file: ${{ github.repository }}/tests/multi-language-repo/.github/codeql/custom-queries.yml@${{
           github.sha }}
+        token: ${{ secrets.CODEQL_TOKEN }}
     - name: Build code
       shell: bash
       run: ./build.sh
     - uses: ./../action/analyze
+      with:
+        token: ${{ secrets.CODEQL_TOKEN }}
     env:
       CODEQL_ACTION_TEST_MODE: true
