--- a/.github/workflows/__scaling-reserved-ram.yml
+++ b/.github/workflows/__scaling-reserved-ram.yml
@@ -91,6 +91,7 @@ jobs:
       with:
         db-location: ${{ runner.temp }}/customDbLocation
         tools: ${{ steps.prepare-test.outputs.tools-url }}
+        token: ${{ secrets.CODEQL_TOKEN }}
 
     - uses: ./../action/.github/actions/setup-swift
       with:
@@ -104,6 +105,7 @@ jobs:
       id: analysis
       with:
         upload-database: false
+        token: ${{ secrets.CODEQL_TOKEN }}
     env:
       CODEQL_ACTION_SCALING_RESERVED_RAM: true
       CODEQL_ACTION_TEST_MODE: true
