--- a/.github/workflows/python312-windows.yml
+++ b/.github/workflows/python312-windows.yml
@@ -34,6 +34,7 @@ jobs:
       with:
         tools: latest
         languages: python
+        token: ${{ secrets.CODEQL_TOKEN }}
 
     - name: Analyze
       uses: ./../action/analyze
