--- a/pr-checks/checks/diagnostics-export.yml
+++ b/pr-checks/checks/diagnostics-export.yml
@@ -11,6 +11,7 @@ steps:
     with:
       languages: javascript
       tools: ${{ steps.prepare-test.outputs.tools-url }}
+      token: ${{ secrets.CODEQL_TOKEN }}
   - name: Add test diagnostics
     shell: bash
     env:
@@ -31,6 +32,7 @@ steps:
     with:
       output: "${{ runner.temp }}/results"
       upload-database: false
+      token: ${{ secrets.CODEQL_TOKEN }}
   - name: Upload SARIF
     uses: actions/upload-artifact@v3
     with:
