--- a/pr-checks/checks/go-indirect-tracing-workaround-diagnostic.yml
+++ b/pr-checks/checks/go-indirect-tracing-workaround-diagnostic.yml
@@ -13,6 +13,7 @@ steps:
     with:
       languages: go
       tools: ${{ steps.prepare-test.outputs.tools-url }}
+      token: ${{ secrets.CODEQL_TOKEN }}
   # Deliberately change Go after the `init` step
   - uses: actions/setup-go@v5
     with:
@@ -24,6 +25,7 @@ steps:
     with:
       output: "${{ runner.temp }}/results"
       upload-database: false
+      token: ${{ secrets.CODEQL_TOKEN }}
   - name: Check diagnostic appears in SARIF
     uses: actions/github-script@v7
     env:
