--- a/pr-checks/checks/language-aliases.yml
+++ b/pr-checks/checks/language-aliases.yml
@@ -7,6 +7,7 @@ steps:
     with:
       languages: C#,java-kotlin,swift,typescript
       tools: ${{ steps.prepare-test.outputs.tools-url }}
+      token: ${{ secrets.CODEQL_TOKEN }}
 
   - name: "Check languages"
     run: |
