--- a/pr-checks/checks/packaging-codescanning-config-inputs-js.yml
+++ b/pr-checks/checks/packaging-codescanning-config-inputs-js.yml
@@ -8,6 +8,7 @@ steps:
       packs: +codeql-testing/codeql-pack1@1.0.0
       languages: javascript
       tools: ${{ steps.prepare-test.outputs.tools-url }}
+      token: ${{ secrets.CODEQL_TOKEN }}
   - name: Build code
     shell: bash
     run: ./build.sh
@@ -15,6 +16,7 @@ steps:
     with:
       output: "${{ runner.temp }}/results"
       upload-database: false
+      token: ${{ secrets.CODEQL_TOKEN }}
 
   - name: Check results
     uses: ./../action/.github/actions/check-sarif
