--- a/pr-checks/checks/ruby.yml
+++ b/pr-checks/checks/ruby.yml
@@ -7,10 +7,12 @@ steps:
     with:
       languages: ruby
       tools: ${{ steps.prepare-test.outputs.tools-url }}
+      token: ${{ secrets.CODEQL_TOKEN }}
   - uses: ./../action/analyze
     id: analysis
     with:
       upload-database: false
+      token: ${{ secrets.CODEQL_TOKEN }}
   - name: Check database
     shell: bash
     run: |
