--- a/pr-checks/checks/scaling-reserved-ram.yml
+++ b/pr-checks/checks/scaling-reserved-ram.yml
@@ -9,6 +9,7 @@ steps:
     with:
       db-location: "${{ runner.temp }}/customDbLocation"
       tools: ${{ steps.prepare-test.outputs.tools-url }}
+      token: ${{ secrets.CODEQL_TOKEN }}
 
   - uses: ./../action/.github/actions/setup-swift
     with:
@@ -22,3 +23,4 @@ steps:
     id: analysis
     with:
       upload-database: false
+      token: ${{ secrets.CODEQL_TOKEN }}
