--- a/pr-checks/checks/test-local-codeql.yml
+++ b/pr-checks/checks/test-local-codeql.yml
@@ -13,6 +13,7 @@ steps:
     uses: ./../action/init
     with:
       tools: ./codeql-bundle-linux64.tar.gz
+      token: ${{ secrets.CODEQL_TOKEN }}
   - uses: ./../action/.github/actions/setup-swift
     with:
       codeql-path: ${{ steps.init.outputs.codeql-path }}
@@ -22,3 +23,4 @@ steps:
   - uses: ./../action/analyze
     with:
       upload-database: false
+      token: ${{ secrets.CODEQL_TOKEN }}
